# food-bot

./: .dockerignore  .gitignore  Dockerfile  bot.py  pyproject.toml  requirements.txt
