[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "food-bot"
version = "1.0.0"
description = "Telegram Food Bot"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.10.0"
openai = "1.30.2"
python-dotenv = "1.0.0"
aiohttp = "3.9.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bot = "bot:main"
